Styling fix for input range on Firefox

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -19,12 +19,13 @@
   display: flex;
   align-items: center;
   padding: 1rem 2rem;
+  transition: background-color 0.5s ease;
   img {
     width: 30%;
   }
   &:hover {
     cursor: pointer;
-    background-color: azure;
+    background-color: rgb(204, 247, 247);
   }
 }
 
